test/fail/basic_syntax/break_outside_loop.lly
#[
SyntaxError: 'break' used outside of a loop.
    from break_outside_loop.lly:6:
]#

break
